# QuestBoard

./: .gitignore  .vercelignore  README.md
.github/workflows/: deploy.yml  test.yml
agent/: README.md
agent/mcp-server/: bounty.py  registry.py  requirements.txt  server.py  soroban_client.py  wallet.py  x402.py
agent/questboard/: SKILL.md
agent/stellar-mcp/: .env.example  README.md  package.json
agent/x402-demo/: .env.example  .gitignore  README.md  package-lock.json  package.json  tsconfig.json
app/: .env.example  .gitignore  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
app/app/: globals.css  layout.tsx  page.tsx
app/components/: ActivityFeed.tsx  BountyBoard.tsx  ConfirmModal.tsx  HermesConsole.tsx  LandingLive.tsx  PicassoHero.tsx  QuestCard.tsx  SiteHeader.tsx  WalletButton.tsx  X402Explainer.tsx
app/lib/: ToastContext.tsx  WalletContext.tsx  activity.ts  bountyClient.ts  contractClients.ts  labels.ts  quests.ts  registryClient.ts  soroban.ts  types.ts  useStellarWallet.ts  utils.ts
app/test/: activity.test.ts  labels.test.ts  quests.test.ts
contracts/: Cargo.toml  SOROBAN_SCAFFOLD.md
contracts/agent_registry/: Cargo.toml  README.md
contracts/agent_registry/src/: lib.rs  test.rs
contracts/bounty_factory/: Cargo.toml  README.md
contracts/bounty_factory/src/: lib.rs  test.rs
docs/: BRANCH-NOTES.md  DEMO-SCRIPT.md  DEMO-VIDEO.md  FRONTEND.md  PITCH.md  PITCHDECK.md  PRODUCT-REVIEW.md  QA.md  TESTING.md  UX-REVIEW.md  UX.md
scripts/: seed.sh  test-contracts.sh  test-endpoints.sh  test.sh
(+29 files in other folders)
