[package]
name = "agent_registry"
version = "0.0.1"
edition = "2021"
description = "QuestBoard — Soroban agent registry with reputation scoring"
license = "MIT"
publish = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]