[package]
name = "bounty_factory"
version = "0.0.1"
edition = "2021"
description = "QuestBoard — Soroban bounty factory contract with USDC escrow"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]